--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <springdoc.version>2.2.0</springdoc.version>
+        <springsecurity.version>3.2.3</springsecurity.version>
     </properties>
     <dependencies>
         <dependency>
@@ -38,6 +39,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>${springsecurity.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+            <version>${springsecurity.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springdoc</groupId>
