--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,22 @@ spring:
   sql:
     init:
       mode: always
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9000
+      client:
+        registration:
+          springauth:
+            client-id: messaging-client
+            client-secret: secret
+            scope:
+              - message.read
+              - message.write
+            authorization-grant-type: client_credentials
+            provider: springauth
+        provider:
+          springauth:
+            authorization-uri: http://localhost:9000/auth2/authorize
+            token-uri: http://localhost:9000/oauth2/token
