--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <springdoc.version>2.2.0</springdoc.version>
         <springsecurity.version>3.2.3</springsecurity.version>
+        <springvalidation.version>3.2.3</springvalidation.version>
     </properties>
     <dependencies>
         <dependency>
@@ -50,7 +51,11 @@
             <version>${springsecurity.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${springvalidation.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
