--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${springvalidation.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
